# cc-dashboard

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
src/cc_dashboard/: __main__.py
