[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-dashboard"
version = "0.2.0"
description = "Live full-screen dashboard for all running Claude Code sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "cc-dashboard contributors" },
]
keywords = ["claude", "claude-code", "dashboard", "terminal", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.scripts]
cc-dashboard = "cc_dashboard.__main__:main"

[project.urls]
Homepage = "https://github.com/anthropics/claude-code"
